--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8"/>
-  <title>Ionic App</title>
+  <title>NaNoPeg Bot Command Builder</title>
 
   <base href="https://spat915.github.io/NaNoPeg-Bot-Command-Builder/">
   <meta name="color-scheme" content="light dark"/>
@@ -11,18 +11,18 @@
   <meta name="format-detection" content="telephone=no"/>
   <meta name="msapplication-tap-highlight" content="no"/>
 
-  <link rel="icon" type="image/png" href="assets/icon/favicon.png"/>
+  <link rel="icon" type="image/png" href="assets/icon/Nanowrimo%20crest%20v2.png"/>
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes"/>
   <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
-<link rel="stylesheet" href="styles.bcf241f01ae82f266171.css"></head>
+<link rel="stylesheet" href="styles.1749d669c5679aed22fb.css"></head>
 
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime-es2015.97e8ba6c5ec99c6ba473.js" type="module"></script><script src="runtime-es5.97e8ba6c5ec99c6ba473.js" nomodule defer></script><script src="polyfills-es5.7f04130fb748fb469cc3.js" nomodule defer></script><script src="polyfills-es2015.91389ecfa80f1063947d.js" type="module"></script><script src="main-es2015.4d6a59c3987be08f6d33.js" type="module"></script><script src="main-es5.4d6a59c3987be08f6d33.js" nomodule defer></script></body>
+<script src="runtime-es2015.e76bf41a7e64cb08326c.js" type="module"></script><script src="runtime-es5.e76bf41a7e64cb08326c.js" nomodule defer></script><script src="polyfills-es5.7f04130fb748fb469cc3.js" nomodule defer></script><script src="polyfills-es2015.91389ecfa80f1063947d.js" type="module"></script><script src="main-es2015.6bea05e2c52e03e01ea9.js" type="module"></script><script src="main-es5.6bea05e2c52e03e01ea9.js" nomodule defer></script></body>
 
 </html>
