--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" class="md">
 
-<head>
+<head><base href="https://spat915.github.io/NaNoPeg-Bot-Command-Builder/">
   <meta charset="utf-8"/>
   <title>NaNoPeg Bot Command Builder</title>
+  <meta name="description" content="Build your commands for NaNoPeg's discord bots with this easy to use interface!"
 
-  <base href="https://spat915.github.io/NaNoPeg-Bot-Command-Builder/">
+  <base href="/"/>
+
   <meta name="color-scheme" content="light dark"/>
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
   <meta name="format-detection" content="telephone=no"/>
   <meta name="msapplication-tap-highlight" content="no"/>
 
   <link rel="icon" type="image/png" href="assets/icon/Nanowrimo%20crest%20v2.png"/>
+  <link rel="apple-touch-icon" href="assets/icons/ios-180x180.png"/>
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes"/>
@@ -23,6 +26,6 @@
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime-es2015.ff22c53d8a8f14f8370c.js" type="module"></script><script src="runtime-es5.ff22c53d8a8f14f8370c.js" nomodule defer></script><script src="polyfills-es5.7f04130fb748fb469cc3.js" nomodule defer></script><script src="polyfills-es2015.91389ecfa80f1063947d.js" type="module"></script><script src="main-es2015.aafab9b1038758a2844a.js" type="module"></script><script src="main-es5.aafab9b1038758a2844a.js" nomodule defer></script></body>
+<script src="runtime-es2015.ff22c53d8a8f14f8370c.js" type="module"></script><script src="runtime-es5.ff22c53d8a8f14f8370c.js" nomodule defer></script><script src="polyfills-es5.7f04130fb748fb469cc3.js" nomodule defer></script><script src="polyfills-es2015.91389ecfa80f1063947d.js" type="module"></script><script src="main-es2015.f0fec78452329e02e2f8.js" type="module"></script><script src="main-es5.f0fec78452329e02e2f8.js" nomodule defer></script></body>
 
 </html>
